--- a/index.html
+++ b/index.html
@@ -491,11 +491,11 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://docs.google.com/document/d/1w4Habzgqj99uiidf9o7PCdvohlMdWmoB1KBpHlRANb8/edit#heading=h.cyckfyu6ugct" class="block-20 zoom-effect" style="background-image: url('images/homeinteriorvisualizationproject.jpg');">
+              <a href="https://www.canva.com/design/DAEM7F3wJCo/tNYL4Od604fBBR94Z4zWWg/edit?utm_content=DAEM7F3wJCo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="block-20 zoom-effect" style="background-image: url('images/homeinteriorvisualizationproject.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://docs.google.com/document/d/1w4Habzgqj99uiidf9o7PCdvohlMdWmoB1KBpHlRANb8/edit#heading=h.cyckfyu6ugct">Home Interior Visualization using Augmented Reality - Real Home Furnitures</a></h3>
+                <h3 class="heading"><a href="https://www.canva.com/design/DAEM7F3wJCo/tNYL4Od604fBBR94Z4zWWg/edit?utm_content=DAEM7F3wJCo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Home Interior Visualization using Augmented Reality - Real Home Furnitures</a></h3>
                 <p>Led a team in developing an Augmented Reality app for Real Home Furnitures, providing customers a real-life furniture design and buying experience. Scoped features, designed wireframes, and created a product roadmap for the mobile application using Android Studio and Blender 3D.</p>
               </div>
             </div>
