--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>A Data Analyst enthusiast with 1.5 years of experience driving business strategies through data-driven insights. Proven expertise in data science, statistical analysis, product and project management.</p>
+            <p>A Data Analyst enthusiast with 2+ years of experience driving business strategies through data-driven insights. Proven expertise in data science, statistical analysis, product and project management.</p>
           </div>
         </div>
 
