commit to index.html 3-6-2024

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 
 						// Create an array of typing text
 						const typingTexts = [
-						'Part-time Engineer! ',
-						'Full-time Chai Lover  ',
+						'Part-time Engineer ',
+						'Full-time Chai Lover!  ',
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -227,7 +227,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Neel Gada</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span>1 Years 5 Months</span></p>
+										<p><span class="title-s">Experience: </span> <span>2 Years</span></p>
 										<p><span class="title-s">Address: </span> <span>Texas, United States of America</span></p>
 									  </div>
 									</div>
