--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Neel Gada</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span>2 Years</span></p>
+										<p><span class="title-s">Experience: </span> <span>2+ Years</span></p>
 										<p><span class="title-s">Address: </span> <span>Texas, United States of America</span></p>
 									  </div>
 									</div>
