data analyst changes

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 						<br>
 						<br>
-			            <h2>Aspiring Product Manager and Data Analytics Enthusiast</h2>
+			            <h2>Data Analytics Enthusiast</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/neel-gada/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
@@ -294,7 +294,7 @@
 								</p>		
 									
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>Product Manager, Business Analyst &amp; Data Analyst</span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Data Analyst &amp; Business Analyst</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Master of Science in MIS &amp; B.Tech in Computer Science</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Tableau &amp; Looker</span></li>
 									<li class="d-flex"><span>Databases:</span> <span>MySQL, Postgres, Firebase &amp; MongoDB</span></li>
