--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">June 2023- August 2023</span>
-						<h2>Product Management Intern, Core Data & Analytics</h2>
+						<h2>Data Product Intern, Core Data & Analytics</h2>
 						<span class="position">Northwestern Mutual</span>
 						<p class="mt-4">Northwestern Mutual is a financial services company providing insurance, investment, and advisory solutions to help individuals and businesses achieve financial security and success. 
 							<ul>
@@ -377,7 +377,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">August 2023 - Present</span>
-						<h2>Student Assistant - Product, Community Learning Center </h2>
+						<h2>Data Management Student Assistant</h2>
 						<span class="position">Texas A&M Univeristy</span>
 						<p class="mt-4">Texas A&M University is a leading public research institution in College Station, Texas, fostering academic excellence and impactful research 
 							<ul>
